examples/test/testpolicy7348.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7348
  namespace: namespace52
spec:
  podSelector:
    matchLabels:
      key16: value31
      key12: value12
      key4: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value12
          key35: value30
      podSelector:
        matchLabels:
          key0: value28
